template/o3-mini/row_44_update_1_template_20250428_184649.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: "CloudFormation template to create a VPC with Managed NAT and four subnets (two public and two private)."

Parameters:
  VPCCIDR:
    Type: String
    Description: "CIDR block for the VPC"
    Default: "10.0.0.0/16"
  PublicSubnet1CIDR:
    Type: String
    Description: "CIDR block for the first public subnet"
    Default: "10.0.1.0/24"
  PublicSubnet2CIDR:
    Type: String
    Description: "CIDR block for the second public subnet"
    Default: "10.0.2.0/24"
  PrivateSubnet1CIDR:
    Type: String
    Description: "CIDR block for the first private subnet"
    Default: "10.0.101.0/24"
  PrivateSubnet2CIDR:
    Type: String
    Description: "CIDR block for the second private subnet"
    Default: "10.0.102.0/24"

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VPCCIDR
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: "ProductionVPC"

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: "ProductionIGW"

  VPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref PublicSubnet1CIDR
      MapPublicIpOnLaunch: true
      AvailabilityZone: !Select [ 0, !GetAZs "" ]
      Tags:
        - Key: Name
          Value: "PublicSubnet1"

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref PublicSubnet2CIDR
      MapPublicIpOnLaunch: true
      AvailabilityZone: !Select [ 1, !GetAZs "" ]
      Tags:
        - Key: Name
          Value: "PublicSubnet2"

  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref PrivateSubnet1CIDR
      MapPublicIpOnLaunch: false
      AvailabilityZone: !Select [ 0, !GetAZs "" ]
      Tags:
        - Key: Name
          Value: "PrivateSubnet1"

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref PrivateSubnet2CIDR
      MapPublicIpOnLaunch: false
      AvailabilityZone: !Select [ 1, !GetAZs "" ]
      Tags:
        - Key: Name
          Value: "PrivateSubnet2"

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: "PublicRouteTable"

  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: VPCGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: "0.0.0.0/0"
      GatewayId: !Ref InternetGateway

  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet1
      RouteTableId: !Ref PublicRouteTable

  PublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet2
      RouteTableId: !Ref PublicRouteTable

  EIPForNat:
    Type: AWS::EC2::EIP
    DependsOn: VPCGatewayAttachment
    Properties:
      Domain: vpc

  NatGateway:
    Type: AWS::EC2::NatGateway
    DependsOn: [PublicSubnet1RouteTableAssociation, EIPForNat]
    Properties:
      SubnetId: !Ref PublicSubnet1
      AllocationId: !GetAtt EIPForNat.AllocationId
      Tags:
        - Key: Name
          Value: "ManagedNATGateway"

  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: "PrivateRouteTable"

  PrivateRoute:
    Type: AWS::EC2::Route
    DependsOn: NatGateway
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      DestinationCidrBlock: "0.0.0.0/0"
      NatGatewayId: !Ref NatGateway

  PrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet1
      RouteTableId: !Ref PrivateRouteTable

  PrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet2
      RouteTableId: !Ref PrivateRouteTable

Outputs:
  VpcId:
    Description: "The ID of the VPC"
    Value: !Ref VPC

  NatGatewayId:
    Description: "The ID of the NAT Gateway"
    Value: !Ref NatGateway

  PublicSubnet1Id:
    Description: "The ID of the first public subnet"
    Value: !Ref PublicSubnet1

  PublicSubnet2Id:
    Description: "The ID of the second public subnet"
    Value: !Ref PublicSubnet2

  PrivateSubnet1Id:
    Description: "The ID of the first private subnet"
    Value: !Ref PrivateSubnet1

  PrivateSubnet2Id:
    Description: "The ID of the second private subnet"
    Value: !Ref PrivateSubnet2
